--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,9 +128,9 @@
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to item_path(items.id),method: :get do %>
+        <%= link_to items_path(@item.id),method: :get do %>
         <div class='item-img-content'>
-          <%= image_tag item.image.variant(resize: '300x300'), class: "item-img" if prototype.image.attached? %>
+          <%= image_tag item.image.variant(resize: '300x300'), class: "item-img" if @item.image.attached? %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
@@ -180,7 +180,7 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<%= link_to('#', class: 'purchase-btn') do %>
+<%= link_to(new_item_path, class: 'purchase-btn') do %>
   <span class='purchase-btn-text'>出品する</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
