--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -125,7 +125,8 @@
     <h2 class='title'>ピックアップカテゴリー</h2>
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
-
+      
+      <% if @items[0] != nil %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
         <% @items.each do |item|%>
@@ -159,10 +160,11 @@
 
         <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
         <%# 商品がある場合は表示されないようにしましょう %>
-          <%# <li class='list'>
-            <%#= link_to '#' do %>
-            <%#= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
-            <%# <div class='item-info'>
+      <% else @items.length == 0 %>
+          <li class='list'>
+            <%= link_to '#' do %>
+            <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
+             <div class='item-info'>
               <h3 class='item-name'>
                 商品を出品してね！
               </h3>
@@ -170,12 +172,13 @@
                 <span>99999999円<br>(税込み)</span>
                 <div class='star-btn'>
                   <%= image_tag "star.png", class:"star-icon" %>
-                  <%# <span class='star-count'>0</span>
+                   <span class='star-count'>0</span>
                 </div>
               </div>
-            </div> %>
-            <%# end %>
-          <%#</li>
+            </div>
+            <% end %>
+          </li>
+      <% end %>
         <%# //商品がある場合は表示されないようにしましょう %>
         <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
