--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,9 +126,8 @@
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
       <% if @items[0] != nil %>
+      <% @items.each do |item|%>
       <li class='list'>
-        <% @items.each do |item|%>
-          <%# if %>
           <%= link_to "#" do %>
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" %>
@@ -151,10 +150,9 @@
               </div>
             </div>
           <% end %>
-          <%# end %>
         <% end %>
       </li>
-      <% else @items.length == 0 %>
+      <% elsif @items.length == 0 %>
           <li class='list'>
             <%= link_to '#' do %>
             <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
